--- a/styles.css
+++ b/styles.css
@@ -17,13 +17,15 @@ body {
 
 .aboutBox
 {box-sizing: border-box;
-  border: 2px solid rgb(96 139 168);
+  border: 2px solid white;
   border-radius: 5px;
 }
 
 .aboutInfo {
   background-color: white;
   text-align: center;
+  border: 2px dotted white;
+  border-radius: 5px;
 }
 
 .bannerStyle
@@ -32,4 +34,6 @@ body {
   position: static;
   padding: 20px;
   width: 800px;
+  border: 2px solid white;
+  border-radius: 5px;
 }
