--- a/styles.css
+++ b/styles.css
@@ -40,7 +40,8 @@ body {
 
 .content
 { margin: auto;
-  display: grid
+  display: grid;
+  grid-template-columns: 1fr 2fr 1fr;
   border: 2px dotted black;
   border-radius: 2px;
 }
