--- a/styles.css
+++ b/styles.css
@@ -42,6 +42,7 @@ body {
 { margin: auto;
   display: grid;
   grid-template-columns: 1fr 2fr 1fr;
+  column-gap: 10px;
   border: 2px dotted black;
   border-radius: 2px;
 }
