--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,8 @@ body {
 
 .aboutBox
 { width: 100%;
+  margin: auto;
+  text-align: center;
   border: 2px solid white;
   border-radius: 5px;
 }
@@ -34,6 +36,7 @@ body {
   position: static;
   padding: 20px;
   width: 800px;
+  text-align: center;
   border: 2px solid white;
   border-radius: 5px;
 }
@@ -54,4 +57,5 @@ body {
   max-width: 200px;
   max-height: 600px;
   display: flex;
+  text-align: center;
 }
