--- a/styles.css
+++ b/styles.css
@@ -15,21 +15,6 @@ body {
   margin: 0;
 }
 
-.aboutBox
-{ width: 100%;
-  margin: auto;
-  text-align: center;
-  border: 2px solid white;
-  border-radius: 5px;
-}
-
-.aboutInfo {
-  background-color: white;
-  text-align: center;
-  border: 2px dotted white;
-  border-radius: 5px;
-}
-
 .bannerStyle
 { margin: auto;
   display: flex;
@@ -57,5 +42,21 @@ body {
   max-width: 200px;
   max-height: 600px;
   display: flex;
+  flex-direction: column;
   text-align: center;
+}
+
+.aboutBox
+{ width: 100%;
+  margin: auto;
+  text-align: center;
+  border: 2px solid white;
+  border-radius: 5px;
+}
+
+.aboutInfo {
+  background-color: white;
+  text-align: center;
+  border: 2px dotted white;
+  border-radius: 5px;
 }
