--- a/styles.css
+++ b/styles.css
@@ -61,7 +61,7 @@ body
   border-radius: 5px;
 }
 
-.middlecontent
-{ background-color: green;
+.middleContent
+{ background-color: blue;
   text-align: center;
 }
