--- a/styles.css
+++ b/styles.css
@@ -52,7 +52,8 @@ body
 }
 
 .aboutBox
-{ width: 100%;
+{ box-sizing: border-box;
+  width: 100%;
   margin: auto;
   text-align: center;
 }
@@ -73,8 +74,12 @@ body
   flex-direction: column;
 }
 
-.middleIntro
-{
+.middleInfo
+{ box-sizing: border-box;
+  background-color: darkblue;
+  text-align: center;
+  margin: auto;
+  width: 100%;
 }
 
 .rightContent
