--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@ body
   display: flex;
   position: static;
   padding: 20px;
-  width: 800px;
+  max-width: 800px;
   height: 150px;
   text-align: center;
   border: 2px solid white;
