--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@ https://files.strawcdn.com/straw/bQmHxpJQhXEtkPNybydS.jpg
 body 
 { background-color: #99CCFF;
   color: white;
+  font-size: 1em;
   font-family: "courier new", Monospace;
   margin: 0;
 }
