--- a/styles.css
+++ b/styles.css
@@ -49,7 +49,7 @@ body
   background-color: red;
   margin: auto;
   display: flex;
-  width: 100%;
+  max-width: 100%;
   padding: 3px;
   flex-direction: column;
   text-align: center;
@@ -71,7 +71,7 @@ body
 
 .middleContent
 { box-sizing: border-box;
-  width: 100%;
+  max-width: 100%;
   padding: 3px;
   background-color: blue;
   text-align: center;
@@ -85,7 +85,7 @@ body
   background-color: darkblue;
   text-align: center;
   margin: auto;
-  width: 100%;
+  max-width: 100%;
 }
 
 h2.middleInfo
@@ -97,7 +97,7 @@ h2.middleInfo
   background-color: yellow;
   text-align: center;
   margin: auto;
-  width: 100%;
+  max-width: 100%;
   padding: 3px;
   display: flex;
   flex-direction: column;
