--- a/styles.css
+++ b/styles.css
@@ -32,13 +32,11 @@ body
 .content
 { box-sizing: border-box;
   margin: auto;
-  display: grid;
+  display: flex;
   max-width: 800px;
   text-align: center;
   position: static;
-  grid-template-columns: 1fr 2fr 1fr;
-  column-gap: 8px;
-  column-count: 4;
+  flex-direction: row;
   border: 2px dotted black;
   border-radius: 5px;
   background-color: aqua;
@@ -48,6 +46,7 @@ body
 { box-sizing: border-box;
   background-color: red;
   margin: auto;
+  flex: 1 1 0;
   display: flex;
   max-width: 100%;
   padding: 3px;
@@ -77,6 +76,7 @@ body
   text-align: center;
   margin: auto;
   display: flex;
+  flex: 2 1 0;
   flex-direction: column;
 }
 
@@ -100,6 +100,7 @@ h2.middleInfo
   max-width: 100%;
   padding: 3px;
   display: flex;
+  flex: 1 1 0;
   flex-direction: column;
 }
 
