--- a/styles.css
+++ b/styles.css
@@ -41,12 +41,13 @@ body
   border: 2px dotted black;
   border-radius: 5px;
   background-color: aqua;
+  justify-content: space-between;
 }
 
 .leftContent
 { box-sizing: border-box;
   background-color: red;
-  margin-right:20px;
+  margin: auto;
   flex: 1 1 0;
   display: flex;
   padding: 3px;
@@ -96,7 +97,7 @@ h2.middleInfo
 { box-sizing: border-box;
   background-color: yellow;
   text-align: center;
-  margin-left:20px;
+  margin: auto;
   padding: 3px;
   display: flex;
   flex: 1 1 0;
