--- a/styles.css
+++ b/styles.css
@@ -41,7 +41,7 @@ body
   border: 2px dotted black;
   border-radius: 5px;
   background-color: aqua;
-  justify-content: space-between;
+  column-gap:8px;
 }
 
 .leftContent
