--- a/styles.css
+++ b/styles.css
@@ -105,7 +105,7 @@ h2.middleInfo
   border: 2px dotted white;
 }
 
-.rightUpd
+.rightUpdate
 { box-sizing: border-box;
   text-align: center;
   background-color: green;
@@ -113,8 +113,9 @@ h2.middleInfo
   overflow: scroll;
 }
 
-.rightNav
-{
+.rightNavigation
+{ box-sizing: border-box;
+  margin: auto;
 
 }
 
