--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,8 @@
 */
 
 /* img links
-https://files.strawcdn.com/straw/bQmHxpJQhXEtkPNybydS.jpg
+bg https://files.strawcdn.com/straw/QYSITlyUZKbThTlScmxY.jpeg
+art https://files.strawcdn.com/straw/bQmHxpJQhXEtkPNybydS.jpg
 */
  
 /* style */
