--- a/styles.css
+++ b/styles.css
@@ -82,7 +82,7 @@ body
 
 .middleInfo
 { box-sizing: border-box;
-  background-image: url("mdn_logo_only_color.png");
+  background-image: url("https://files.strawcdn.com/straw/QYSITlyUZKbThTlScmxY.jpeg");
   background-repeat: repeat repeat;
   background-color: darkblue;
   text-align: center;
