--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@
 */
 
 /* img links
-bg https://files.strawcdn.com/straw/QYSITlyUZKbThTlScmxY.jpeg
+bg http://theinspirationgallery.com/wallpaper/damask/images/wp_damask_187.gif
 art https://files.strawcdn.com/straw/bQmHxpJQhXEtkPNybydS.jpg
 */
  
