--- a/styles.css
+++ b/styles.css
@@ -82,7 +82,7 @@ body
 
 .middleInfo
 { box-sizing: border-box;
-  background-image: url("https://files.strawcdn.com/straw/QYSITlyUZKbThTlScmxY.jpeg");
+  background-image: url("http://theinspirationgallery.com/wallpaper/damask/images/wp_damask_187.gif");
   background-repeat: repeat repeat;
   background-color: darkblue;
   text-align: center;
