--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@
 */
 
 /* img links
+bg cloud https://files.strawcdn.com/straw/kzECHHWqcxvnmCOxwdxX.gif
 bg http://theinspirationgallery.com/wallpaper/damask/images/wp_damask_187.gif
 art https://files.strawcdn.com/straw/bQmHxpJQhXEtkPNybydS.jpg
 */
