--- a/styles.css
+++ b/styles.css
@@ -11,9 +11,9 @@ art https://files.strawcdn.com/straw/bQmHxpJQhXEtkPNybydS.jpg
 /* style */
 
 body 
-{ background-color: #99CCFF;
-  background-image: url("https://files.strawcdn.com/straw/kzECHHWqcxvnmCOxwdxX.gif");
+{ background-image: url("https://files.strawcdn.com/straw/kzECHHWqcxvnmCOxwdxX.gif");
   background-repeat: repeat repeat;
+  background-color: #99CCFF;
   color: white;
   font-size: 1em;
   font-family: "courier new", Monospace;
