--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ art https://files.strawcdn.com/straw/bQmHxpJQhXEtkPNybydS.jpg
 
 body 
 { background-image: url("https://files.strawcdn.com/straw/kzECHHWqcxvnmCOxwdxX.gif");
-  background-repeat: repeat repeat;
+  background-repeat: repeat, repeat;
   background-color: #99CCFF;
   color: white;
   font-size: 1em;
