--- a/styles.css
+++ b/styles.css
@@ -63,10 +63,12 @@ body
 { box-sizing: border-box;
   margin: auto;
   text-align: center;
+  background-color: pink;
 }
 
 .aboutInfo 
-{ background-color: white;
+{ box-sizing: border-box;
+  background-color: white;
   text-align: center;
   border: 1px dotted white;
   border-radius: 5px;
