--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@
 /* img links
 bg cloud https://files.strawcdn.com/straw/kzECHHWqcxvnmCOxwdxX.gif
 bg http://theinspirationgallery.com/wallpaper/damask/images/wp_damask_187.gif
+banner jss https://files.strawcdn.com/straw/eKryPgCfvXsMAtfhZBFi.jpeg
 art https://files.strawcdn.com/straw/bQmHxpJQhXEtkPNybydS.jpg
 */
  
