--- a/styles.css
+++ b/styles.css
@@ -125,8 +125,9 @@ h2.middleInfo
 
 .rightNavigation
 { box-sizing: border-box;
-  margin: auto;
-
+  background-color: teal;
+  border: 2px dotted olive;
+  overflow: scroll;
 }
 
 .decorButtonStyle
