--- a/styles.css
+++ b/styles.css
@@ -62,6 +62,7 @@ body
   flex: 1 1 0;
   display: flex;
   flex-direction: column;
+  justify-content: center;
   text-align: center;
   border: 2px dotted white;
 }
