--- a/styles.css
+++ b/styles.css
@@ -150,7 +150,7 @@ h2.middleInfo
 { box-sizing: border-box;
   background-color: fuchsia;
   flex-direction: row;
- 
+  border: 1px dotted black;
 }
 
 .buttonStyle
