--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
 /* img links
 bg cloud https://files.strawcdn.com/straw/kzECHHWqcxvnmCOxwdxX.gif
 bg http://theinspirationgallery.com/wallpaper/damask/images/wp_damask_187.gif
-banner jss https://files.strawcdn.com/straw/eKryPgCfvXsMAtfhZBFi.jpeg
+banner https://files.strawcdn.com/straw/MGgnmLkMXqlIanbfNpQd.jpg
 art https://files.strawcdn.com/straw/bQmHxpJQhXEtkPNybydS.jpg
 */
  
@@ -30,7 +30,7 @@ body
 }
 
 .bannerStyle
-{ background-image: url("");
+{ background-image: url("https://files.strawcdn.com/straw/MGgnmLkMXqlIanbfNpQd.jpg");
   background-size: cover;
   background-color: navy;
   background-clip: content-box;
