--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,10 @@ bg http://theinspirationgallery.com/wallpaper/damask/images/wp_damask_187.gif
 banner https://files.strawcdn.com/straw/MGgnmLkMXqlIanbfNpQd.jpg
 art https://files.strawcdn.com/straw/bQmHxpJQhXEtkPNybydS.jpg
 */
+
+/* buttons
+(powered by testosterone) https://files.strawcdn.com/straw/zFlEUqEUtgAFAKJkpNNZ.gif
+*/
  
 /* style */
 
