--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,8 @@ art https://files.strawcdn.com/straw/bQmHxpJQhXEtkPNybydS.jpg
 
 /* buttons
 (powered by testosterone) https://files.strawcdn.com/straw/zFlEUqEUtgAFAKJkpNNZ.gif
+(made with affection) https://files.strawcdn.com/straw/UKBzIjMANNvdVlZWLrLl.gif
+
 */
  
 /* style */
