--- a/styles.css
+++ b/styles.css
@@ -55,7 +55,7 @@ body
   margin: auto;
   display: flex;
   padding: 10px;
-  width: 100%;
+  width: 900px;
   text-align: center;
   position: static;
   flex-direction: row;
