--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,7 @@ art https://files.strawcdn.com/straw/bQmHxpJQhXEtkPNybydS.jpg
 /* buttons
 (powered by testosterone) https://files.strawcdn.com/straw/zFlEUqEUtgAFAKJkpNNZ.gif
 (made with affection) https://files.strawcdn.com/straw/UKBzIjMANNvdVlZWLrLl.gif
+(proud of my son) https://files.strawcdn.com/straw/FmPyRzsluFUbLtKvkxwA.gif
 
 */
  
