--- a/styles.css
+++ b/styles.css
@@ -158,6 +158,15 @@ h2.middleInfo
   margin-top: 4px;
 }
 
+.rightToDo
+{ box-sizing: border-box;
+  text-align: center;
+  background-color: blue;
+  border: 2px dotted yellow;
+  overflow: scroll;
+  margin-top: 2px;
+}
+
 .containButtonStyle
 { box-sizing: border-box;
   background-color: fuchsia;
