--- a/styles.css
+++ b/styles.css
@@ -150,12 +150,13 @@ h2.middleInfo
 }
 
 .listNavigation
-{
+{ list-style: navSymbol;
   
 }
 
-@counter-style nav-symbol
-{
+@counter-style navSymbol
+{ system: cyclic;
+  symbols: "\2023";
   
 }
 
