--- a/styles.css
+++ b/styles.css
@@ -61,8 +61,6 @@ body
   text-align: center;
   position: static;
   flex-direction: row;
-  border: 2px dotted aqua;
-  border-radius: 5px;
   background-color: transparent;
   column-gap: 8px;
   border-image-repeat: round;
@@ -79,7 +77,7 @@ body
   flex-direction: column;
   justify-content: center;
   text-align: center;
-  border: 2px dotted white;
+  border: 10px solid;
 }
 
 .aboutBox
