--- a/styles.css
+++ b/styles.css
@@ -61,11 +61,9 @@ body
   text-align: center;
   position: static;
   flex-direction: row;
-  background-color: transparent;
+  background-color: teal;
   column-gap: 8px;
-  border-image-repeat: round;
-  border-image-slice: 8 fill;
-  border-image-source: url("https://files.strawcdn.com/straw/GSopLeHoZTFcNUlbaWAp.png");
+  border: 1px dotted white;
 }
 
 .leftContent
@@ -77,7 +75,9 @@ body
   flex-direction: column;
   justify-content: center;
   text-align: center;
-  border: 10px solid;
+  border-image-repeat: round;
+  border-image-slice: 8 fill;
+  border-image-source: url("https://files.strawcdn.com/straw/GSopLeHoZTFcNUlbaWAp.png");
 }
 
 .aboutBox
@@ -118,7 +118,9 @@ body
   display: flex;
   flex: 2 1 0;
   flex-direction: column;
-  border: 2px dotted white;
+  border-image-repeat: round;
+  border-image-slice: 8 fill;
+  border-image-source: url("https://files.strawcdn.com/straw/GSopLeHoZTFcNUlbaWAp.png");
 }
 
 .middleInfo
@@ -141,7 +143,9 @@ h2.middleInfo
   display: flex;
   flex: 1 1 0;
   flex-direction: column;
-  border: 2px dotted white;
+  border-image-repeat: round;
+  border-image-slice: 8 fill;
+  border-image-source: url("https://files.strawcdn.com/straw/GSopLeHoZTFcNUlbaWAp.png");
 }
 
 .rightNavigation
