--- a/styles.css
+++ b/styles.css
@@ -82,6 +82,7 @@ body
   border-right-width: 10px;
   border-top-width: 10px;
   border-bottom-width:10px;
+  border-image-outset: 0;
   border-image-source: url("https://files.strawcdn.com/straw/GSopLeHoZTFcNUlbaWAp.png");
 }
 
@@ -130,6 +131,7 @@ body
   border-right-width: 10px;
   border-top-width: 10px;
   border-bottom-width:10px;
+  border-image-outset: 0;
   border-image-source: url("https://files.strawcdn.com/straw/GSopLeHoZTFcNUlbaWAp.png");
 }
 
@@ -160,6 +162,7 @@ h2.middleInfo
   border-right-width: 10px;
   border-top-width: 10px;
   border-bottom-width:10px;
+  border-image-outset: 0;
   border-image-source: url("https://files.strawcdn.com/straw/GSopLeHoZTFcNUlbaWAp.png");
 }
 
