--- a/styles.css
+++ b/styles.css
@@ -75,11 +75,14 @@ body
   flex-direction: column;
   justify-content: center;
   text-align: center;
+  border: 5px solid white;
   border-image-repeat: round;
-  border-left-width: 10px;
-  border-right-width: 10px;
-  border-top-width: 10px;
-  border-bottom-width:10px;
+  border-image-slice: 8;
+  border-image-width: 1;
+  border-left-width: 8px;
+  border-right-width: 8px;
+  border-top-width: 8px;
+  border-bottom-width:8px;
   border-image-outset: 0;
   border-image-source: url("https://files.strawcdn.com/straw/GSopLeHoZTFcNUlbaWAp.png");
 }
@@ -126,10 +129,10 @@ body
   border-image-repeat: round;
   border-image-slice: 8;
   border-image-width: 1;
-  border-left-width: 10px;
-  border-right-width: 10px;
-  border-top-width: 10px;
-  border-bottom-width:10px;
+  border-left-width: 8px;
+  border-right-width: 8px;
+  border-top-width: 8px;
+  border-bottom-width:8px;
   border-image-outset: 0;
   border-image-source: url("https://files.strawcdn.com/straw/GSopLeHoZTFcNUlbaWAp.png");
 }
@@ -154,13 +157,14 @@ h2.middleInfo
   display: flex;
   flex: 1 1 0;
   flex-direction: column;
+  border: 5px solid white;
   border-image-repeat: round;
   border-image-slice: 8;
   border-image-width: 1;
-  border-left-width: 10px;
-  border-right-width: 10px;
-  border-top-width: 10px;
-  border-bottom-width:10px;
+  border-left-width: 8px;
+  border-right-width: 8px;
+  border-top-width: 8px;
+  border-bottom-width:8px;
   border-image-outset: 0;
   border-image-source: url("https://files.strawcdn.com/straw/GSopLeHoZTFcNUlbaWAp.png");
 }
