--- a/styles.css
+++ b/styles.css
@@ -61,9 +61,9 @@ body
   text-align: center;
   position: static;
   flex-direction: row;
-  background-color: teal;
+  background-color: transparent;
   column-gap: 8px;
-  border: 1px dotted white;
+  border: 2px dotted black;
 }
 
 .leftContent
