--- a/styles.css
+++ b/styles.css
@@ -76,6 +76,7 @@ body
   justify-content: center;
   text-align: center;
   border: 5px solid white;
+  padding:5px;
   border-image-repeat: round;
   border-image-slice: 8;
   border-image-width: 1;
@@ -126,6 +127,7 @@ body
   flex: 2 1 0;
   flex-direction: column;
   border: 5px solid white;
+  padding: 5px;
   border-image-repeat: round;
   border-image-slice: 8;
   border-image-width: 1;
@@ -158,6 +160,7 @@ h2.middleInfo
   flex: 1 1 0;
   flex-direction: column;
   border: 5px solid white;
+  padding: 5px;
   border-image-repeat: round;
   border-image-slice: 8;
   border-image-width: 1;
