--- a/styles.css
+++ b/styles.css
@@ -119,14 +119,13 @@ body
 
 .middleContent
 { box-sizing: border-box;
-  background-color: #F4F7FF;
+  background-color: transparent;
   text-align: center;
   margin: auto;
   display: flex;
   flex: 2 1 0;
   flex-direction: column;
   border: 5px solid white;
-  padding: 5px;
   border-image-repeat: round;
   border-image-slice: 8;
   border-image-width: 1;
@@ -152,14 +151,13 @@ h2.middleInfo
 
 .rightContent
 { box-sizing: border-box;
-  background-color: #F4F7FF;
+  background-color: transparent;
   text-align: center;
   margin: auto;
   display: flex;
   flex: 1 1 0;
   flex-direction: column;
   border: 5px solid white;
-  padding: 5px;
   border-image-repeat: round;
   border-image-slice: 8;
   border-image-width: 1;
