--- a/styles.css
+++ b/styles.css
@@ -250,6 +250,15 @@ h2.middleInfo
 }
 
 .cloudBorder
-{
+{ border: 5px solid white;
+  border-image-repeat: round;
+  border-image-slice: 8;
+  border-image-width: 1;
+  border-left-width: 8px;
+  border-right-width: 8px;
+  border-top-width: 8px;
+  border-bottom-width:8px;
+  border-image-outset: 0;
+  border-image-source: url("https://files.strawcdn.com/straw/GSopLeHoZTFcNUlbaWAp.png");
 
 }
