--- a/styles.css
+++ b/styles.css
@@ -86,16 +86,6 @@ body
   padding: 5px;
   background-color: #F4F7FF;
   width: 100%;
-  border: 5px solid white;
-  border-image-repeat: round;
-  border-image-slice: 8;
-  border-image-width: 1;
-  border-left-width: 8px;
-  border-right-width: 8px;
-  border-top-width: 8px;
-  border-bottom-width:8px;
-  border-image-outset: 0;
-  border-image-source: url("https://files.strawcdn.com/straw/GSopLeHoZTFcNUlbaWAp.png");
 }
 
 .aboutInfo 
@@ -116,17 +106,6 @@ body
 .featuredBox
 { box-sizing: border-box;
   background-color: gray;
-  border: 5px solid white;
-  margin-top: 10px;
-  border-image-repeat: round;
-  border-image-slice: 8;
-  border-image-width: 1;
-  border-left-width: 8px;
-  border-right-width: 8px;
-  border-top-width: 8px;
-  border-bottom-width:8px;
-  border-image-outset: 0;
-  border-image-source: url("https://files.strawcdn.com/straw/GSopLeHoZTFcNUlbaWAp.png");
 }
 
 .middleContent
@@ -250,7 +229,10 @@ h2.middleInfo
 }
 
 .cloudBorder
-{ border: 5px solid white;
+{ box-sizing: border-box;
+  background-color: transparent;
+  border: 5px solid white;
+  margin: auto;
   border-image-repeat: round;
   border-image-slice: 8;
   border-image-width: 1;
