--- a/styles.css
+++ b/styles.css
@@ -230,6 +230,7 @@ h2.middleInfo
 
 .cloudBorder
 { box-sizing: border-box;
+  width: 100%
   background-color: transparent;
   border: 5px solid white;
   margin: auto;
@@ -242,5 +243,4 @@ h2.middleInfo
   border-bottom-width:8px;
   border-image-outset: 0;
   border-image-source: url("https://files.strawcdn.com/straw/GSopLeHoZTFcNUlbaWAp.png");
-
 }
